--- a/GColab_usando_JupyterLab_ngrok.ipynb
+++ b/GColab_usando_JupyterLab_ngrok.ipynb
@@ -194,7 +194,7 @@
     "id": "ao6pRPjSNIjc"
    },
    "source": [
-    "Configure o ngrok com o seu Authtoken (tire <Authtoken> e coloque o seu Authtoken) :"
+    "Configure o ngrok com o seu Authtoken (tire `<Authtoken>` e coloque o seu Authtoken) :"
    ]
   },
   {
@@ -249,7 +249,7 @@
     "- ser aberta uma aba no navegador web pedindo a senha escolhida antes (ao rodar `jupyter server password`);\n",
     "- depois mostrar o Jupyter Lab/Notebook na aba do navegador web do seu computador local !\n",
     "\n",
-    "Pronto, agora você tem Google Colab com interface Jupyter Lab/Notebook ! 8-)"
+    "Pronto, agora você tem Google Colab com interface Jupyter Lab/Notebook !"
    ]
   }
  ],
