--- a/GColab_usando_JupyterLab_ngrok.ipynb
+++ b/GColab_usando_JupyterLab_ngrok.ipynb
@@ -45,7 +45,7 @@
       },
       "source": [
         "### Objetivo\n",
-        "Usar sessão do [Google Colab](https://colab.research.google.com) ([Free/Pro/Pro+](https://colab.research.google.com/signup/pricing) com interface do [JupyterLab ou Jupyter Notebook](https://jupyter.org/)."
+        "Usar sessão do [Google Colab](https://colab.research.google.com) ([Free/Pro/Pro+](https://colab.research.google.com/signup/pricing)) com interface do [JupyterLab ou Jupyter Notebook](https://jupyter.org/)."
       ]
     },
     {
