--- a/GColab_usando_JupyterLab_ColabCode.ipynb
+++ b/GColab_usando_JupyterLab_ColabCode.ipynb
@@ -46,7 +46,7 @@
       },
       "source": [
         "### Objetivo\n",
-        "Usar sessão do [Google Colab](https://colab.research.google.com) ([Free/Pro/Pro+](https://colab.research.google.com/signup/pricing) com interface do [JupyterLab](https://jupyter.org/)."
+        "Usar sessão do [Google Colab](https://colab.research.google.com) ([Free/Pro/Pro+](https://colab.research.google.com/signup/pricing)) com interface do [JupyterLab](https://jupyter.org/)."
       ]
     },
     {
